Update Next.js to fix security vulnerability

--- a/style/globals.css
+++ b/style/globals.css
@@ -1,6 +1,9 @@
 @import "tailwindcss";
 @config "../tailwind.config.js";
 
+@custom-variant portrait (@media (orientation: portrait));
+@custom-variant landscape (@media (orientation: landscape));
+
 @import "./font.css";
 @import "./scollbar.css";
 
